Mimic GitHub dark mode, some minor fixes

--- a/_assets/scss/style.scss
+++ b/_assets/scss/style.scss
@@ -1,51 +1,13 @@
-$blue:                    #337ab7;
-$navbar-dark-color:       rgba(#fff, .75);
-$navbar-dark-hover-color: #fff;
-$scrollbutton-bg:         rgba(255, 255, 255, 0.5);
-$scrollbutton-bg-hover:   rgba(255, 255, 255, 0.8);
-$scrollbutton-color:      rgba(0, 0, 0, 0.5);
+$dark: #161b22 !default;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap-table/dist/bootstrap-table.css";
 @import "docs";
 
-/* Mimic Bootstrap tables for markdown tables only
-   from bootstrap/scss/_variables: */
+$scrollbutton-bg:       rgba(255, 255, 255, 0.5);
+$scrollbutton-bg-hover: rgba(255, 255, 255, 0.8);
+$scrollbutton-color:    rgba(0, 0, 0, 0.5);
 
-$white:    #fff !default;
-$gray-300: #dee2e6 !default;
-$gray-600: #6c757d !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-
-$body-bg:                     $white !default;
-$body-color:                  $gray-900 !default;
-
-$border-color:                $gray-300 !default;
-$border-width:                1px !default;
-
-$table-accent-bg:             rgba($black, .05) !default;
-$table-striped-order:         odd !default;
-
-$table-dark-bg:               #222;
-
-table {
-	width:100%;
-	border-collapse: collapse;
-	margin-bottom: 1em;
-}
-thead > tr > th, tbody > tr > td {
-	text-align: left;
-	padding: 5px 10px;
-	border: $border-width solid $border-color;
-}
-thead > tr > th {
-	color: $white;
-	background-color: $table-dark-bg;
-}
-tbody tr:nth-child(#{$table-striped-order}) {
-	background-color: $table-accent-bg;
-}
 pre {
 	border: 2px solid rgba($black, .2);
 	border-radius: 0.50rem;
@@ -92,12 +54,16 @@ blockquote:before {
 }
 $color-mode-type: data;
 @include color-mode(light) {
-  h1, h2, h3 {
-    color: $blue;
-  }
+	h1, h2, h3 {
+		color: #161b22;
+	}
+	--bs-body-bg:    $white;
+	--bs-body-color: $gray-900;
 }
 @include color-mode(dark) {
-  h1, h2, h3 {
-    color: $gray-300;
-  }
+	h1, h2, h3 {
+		color: $gray-300;
+	}
+	--bs-body-bg:    #0d1117;
+	--bs-body-color: #c9d1d9;
 }
